# Build-an-MCP-From-Scratch

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
examples/: README.md  http_adapter.py  stdio_host.py  transport.py  validate_and_call.py
examples/ch02/: minimal_add_server.py
examples/ch03/: transport.py  validate_and_call.py
src/build_an_mcp_server/: __init__.py  browser_utils.py  fs_utils.py  github_utils.py  server.py
